feat: Improve file editor UX
- File selection button now always visible
- Disabled (opacity 0.5) in non-file-editor modes
- Enabled (opacity 1.0) in file-editor mode
- Window size already 1200x900 in tauri.conf.json

--- a/tauri-app/src/index.html
+++ b/tauri-app/src/index.html
@@ -101,9 +101,10 @@
       </div>
 
       <!-- File Editor Settings -->
-      <div class="settings-group" id="file-editor-settings" style="display: none;">
+      <div class="settings-group" id="file-editor-settings">
         <label>File Selection</label>
-        <button id="select-file-btn" class="secondary-btn small-btn">📁 Select File</button>
+        <button id="select-file-btn" class="secondary-btn small-btn" disabled style="opacity: 0.5;">📁 Select
+          File</button>
         <div id="selected-file-info" class="file-info hidden">
           <span class="file-name" id="selected-file-name"></span>
           <span class="file-size" id="selected-file-size"></span>
