fix: add reqwest dependency and fix tuple destructuring in api.rs

--- a/tauri-app/src/index.html
+++ b/tauri-app/src/index.html
@@ -202,6 +202,7 @@
 
       <div class="input-area">
         <textarea id="prompt-input" placeholder="Ask anything... (Ctrl+Enter to send)"></textarea>
+        <button id="abort-btn" class="abort-btn hidden">⏹️ Stop</button>
         <button id="send-btn">Send 🚀</button>
       </div>
 
@@ -226,7 +227,7 @@
         </div>
         <div class="footer-item">
           <span class="footer-label">Version:</span>
-          <span class="footer-value">2.2.0</span>
+          <span class="footer-value">2.4.0</span>
         </div>
         <div class="footer-item">
           <span class="footer-label">APP ID:</span>
@@ -234,7 +235,7 @@
         </div>
         <div class="footer-item">
           <span class="footer-label">Release:</span>
-          <span class="footer-value">03.12.2025</span>
+          <span class="footer-value">04.12.2025</span>
         </div>
         <div class="footer-item">
           <span class="footer-label">Window:</span>
